k8s/overlays/shokohsc/jump/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jump
spec:
  template:
    spec:
      containers:
        - name: jump
          image: shokohsc/jump
