k8s/overlays/shokohsc/jump/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jump
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    flame.pawelmalak/name: dev-jump
    flame.pawelmalak/url: 'https://dev.jump.shokohsc.home'
    flame.pawelmalak/type: app
    flame.pawelmalak/icon: wrench
spec:
  rules:
  - host: dev.jump.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jump
            port:
              number: 80
  tls:
  - hosts:
    - dev.jump.shokohsc.home
    secretName: jump-cert
